@@ -12,6 +12,7 @@ Process Hacker
  * FIXED:
    * Now the process tree and service list update instantly after 
      starting Process Hacker instead of waiting
+   * Random "Generic GDI+ Error" exceptions
 
 1.3.1.0
  * SUMMARY: This version adds many small but useful features. It is 
